fix: исправлены changelog и changesets в liquibase

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,10 @@ spring:
   application:
     name: deals-rest-api
   config:
-    import: classpath: database.yml
+    import: database.yml
   mvc:
     hiddenmethod:
       filter:
         enabled: true
+  liquibase:
+    change-log: db/changelog/changelog-master.yaml
