--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
             <artifactId>spring-boot-starter-quartz</artifactId>
             <version>3.3.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>ru.luttsev</groupId>
+            <artifactId>spring-boot-starter-auditlib</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
