fix: конфигурация БД перенесена в application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 spring:
   application:
     name: deals-rest-api
-  config:
-    import: database.yml
   mvc:
     hiddenmethod:
       filter:
@@ -29,6 +27,14 @@ spring:
             threadCount: 10
             threadsInheritContextClassLoaderOfInitializingThread: true
     auto-startup: false
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url:
+    username:
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: none
 
 server:
   port: 8081
