feat: добавлена защита API

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,8 +38,12 @@ spring:
       ddl-auto: none
 
 server:
-  port: 8081
+  port: 8082
 
 auditlib:
   appender: file
   log-level: INFO
+
+jwt:
+  access:
+    secret:
